fix #1865. On touch devices activate fix for stuck navbar

--- a/src/nyc_trees/sass/partials/_globals.scss
+++ b/src/nyc_trees/sass/partials/_globals.scss
@@ -442,3 +442,15 @@ aside {
     cursor: auto;
   }
 }
+
+.fixfixed {
+
+  .main-header,
+  .map-survey {
+    position: absolute;
+  }
+
+  .right-content {
+    position: static
+  }
+}
